; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/agp/extr_frontend.c_agp_find_client_by_pid.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/agp/extr_frontend.c_agp_find_client_by_pid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }
%struct.agp_client = type { i32 }

@agp_fe = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.agp_client* @agp_find_client_by_pid(i32 %0) #0 {
  %2 = alloca %struct.agp_client*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.agp_client*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @agp_fe, i32 0, i32 0), align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store %struct.agp_client* null, %struct.agp_client** %2, align 8
  br label %13

8:                                                ; preds = %1
  %9 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @agp_fe, i32 0, i32 0), align 8
  %10 = load i32, i32* %3, align 4
  %11 = call %struct.agp_client* @agp_find_client_in_controller(i32* %9, i32 %10)
  store %struct.agp_client* %11, %struct.agp_client** %4, align 8
  %12 = load %struct.agp_client*, %struct.agp_client** %4, align 8
  store %struct.agp_client* %12, %struct.agp_client** %2, align 8
  br label %13

13:                                               ; preds = %8, %7
  %14 = load %struct.agp_client*, %struct.agp_client** %2, align 8
  ret %struct.agp_client* %14
}

declare dso_local %struct.agp_client* @agp_find_client_in_controller(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
